<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nufscarv11.studio.com.nufscar_v11.Favoritos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/favoritos"
        android:id="@+id/textFavoritos"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsfeed"
        android:id="@+id/buttonNewsfeed"
        android:layout_below="@+id/textFavoritos"
        android:backgroundTint="#5F021F" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/busca"
        android:id="@+id/buttonBusca"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="120dp"
        android:backgroundTint="#5F021F" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventos"
        android:id="@+id/buttonEventos"
        android:layout_marginLeft="240dp"
        android:layout_below="@+id/textFavoritos"
        android:backgroundTint="#5F021F" />


</RelativeLayout>
