<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nufscarv11.studio.com.nufscar_v11.Eventos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventos"
        android:textSize="12pt"
        android:id="@+id/textEventos"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    //Calendário
    <com.github.sundeepk.compactcalendarview.CompactCalendarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/compactcalendar_view"
        android:layout_width="fill_parent"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:compactCalendarTargetHeight="250dp"
        app:compactCalendarTextSize="12sp"
        app:compactCalendarBackgroundColor="#ffe95451"
        app:compactCalendarTextColor="#fff"
        app:compactCalendarCurrentSelectedDayBackgroundColor="#E57373"
        app:compactCalendarCurrentDayBackgroundColor="#B71C1C"
        app:compactCalendarMultiEventIndicatorColor="#fff"
        android:layout_above="@+id/buttonSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp" />

    //Botao News Feed
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newsfeed"
        android:id="@+id/buttonNewsfeed"
        android:backgroundTint="#5F021F"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    //Botao Busca
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/busca"
        android:id="@+id/buttonSearch"
        android:backgroundTint="#5F021F"
        android:layout_above="@+id/buttonNewsfeed"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp" />

    //Botao Adicionar
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/buttonAdd"
        android:layout_alignTop="@+id/buttonSearch"
        android:layout_marginRight="220dp"
        android:layout_marginLeft="220dp"
        android:backgroundTint="#5F021F" />

    //Botao Favoritos
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:id="@+id/buttonFavoritos"
        android:layout_alignTop="@+id/buttonNewsfeed"
        android:layout_alignRight="@+id/buttonAdd"
        android:layout_alignEnd="@+id/buttonAdd"
        android:backgroundTint="#5F021F" />
</RelativeLayout>
