<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nufscarv11.studio.com.nufscar_v11.Login">

    <EditText
        android:hint="@string/usuario"
        android:id="@+id/textLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/senha"
        android:layout_width="match_parent"
        android:layout_below="@+id/textLogin"
        android:layout_height="wrap_content"
        android:id="@+id/textPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:id="@+id/buttonLogin"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/textPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#5F021F" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:id="@+id/buttonCadastro"
        android:backgroundTint="#5F021F"
        android:layout_alignTop="@+id/buttonLogin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
